--- a/07-PE_Univariados.Rmd
+++ b/07-PE_Univariados.Rmd
@@ -295,7 +295,6 @@ head(X_t)
 
 
 ```{r GAR1Real, fig.cap="AR(1) considerando $X_t=5+0.9X_{t-1}+U_t$ ; $X_0=50$ y que $U_t$~$N(0, 4)$ y que $U_t \\sim \\mathcal{N}(0, 4)$", fig.align='center', echo=FALSE, out.width="100%"}
-
 ggplot(data = X_t, aes(x = Tiempo, y = XR_t)) + 
   geom_line(size = 0.5, color = "darkred") +
   theme_light()+ 
@@ -532,14 +531,14 @@ tiempo en especifico:
 Recordando el tema pasado y la serie en la que evaluamos los cambios de
 precio del ACTIVO AMZN como si fueran retornos:
 
-```{r message=FALSE, warning=FALSE, warning=FALSE, message=FALSE}
+```{r message=FALSE, warning=FALSE, warning=FALSE, message=FALSE , fig.align='center', out.width="100%"}
 #install.packages("pacman")
 #pacman nos permite cargar varias librerias en una sola línea
 library(pacman)
 pacman::p_load(tidyverse,BatchGetSymbols,ggplot2,lubridate,readxl,forecast,stats,stargazer)
 ```
 
-```{r fig.show='hide', echo=FALSE, message=FALSE, , echo=TRUE}
+```{r fig.show='hide', echo=FALSE, message=FALSE, , echo=TRUE, fig.align='center', out.width="100%"}
 #Primero determinamos el lapso de tiempo
 pd<-Sys.Date()-(365*20) #primer fecha
 pd
@@ -565,7 +564,7 @@ colnames(data_precio_amzn)
 
 ```
 
-```{r amazn20, fig.cap="Serie de tiempo de los precios de apertura de año en los últimos 20 años", warning=FALSE, message=FALSE}
+```{r amazn20, fig.cap="Serie de tiempo de los precios de apertura de año en los últimos 20 años", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 ret_20_amazn<-ggplot(data=data_precio_amzn, aes(x=ref.date))+
   geom_line(aes(y=price.open))+
   labs(title="Precios de apertura de AMZN en los últimos 20 años",y="Retornos", x="Año")+
@@ -578,7 +577,7 @@ Primero que nada es importante cargar los datos a un objeto series de
 tiempo. Esto nos lo permite la función ts(). Además debemos serciorarnos
 de que los datos esten en orden cronológico.
 
-```{r, warning=FALSE, message=FALSE}
+```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 data_precio_amzn<-data_precio_amzn[order(data_precio_amzn$ref.date),]
 head(data_precio_amzn)#dado que ya estaba en orden cronológico nuestro df no cambia
 #hagamos el objeto ts
@@ -589,7 +588,7 @@ plot(price_amazn_ts)#de esta manera podemos ver que se cargo bien debido a que e
 Dado que queremos saber si existe un proceso $AR(2)$ en estos cambio
 debemos calcularlo. Para ello utilizamos la función $lm()$ que realizará una regresión lineal y veremos la relación de los valores con sus valores pasados en $t-2$:
 
-```{r}
+```{r, fig.align='center', out.width="100%"}
 priceopen<-data_precio_amzn$price.open
 priceopen_amazn<-data.matrix(priceopen)
 lags<-function(mat,p){
@@ -601,15 +600,11 @@ lags<-function(mat,p){
 
 df.lags<-lags(priceopen_amazn,2)
 ar2_amazn<-lm(V1~., data=df.lags)
-summary(ar2_amazn)
-
-
-
 ```
 
 Veamos la tabla de la regresión lineal:
 
-```{r, results='asis', echo=FALSE}
+```{r, results='asis', echo=FALSE, fig.align='center', out.width="100%"}
 stargazer(
   ar2_amazn,type = "html",
   notes.align = "l", style="all2", 
@@ -622,23 +617,22 @@ La tabla anterior claramente indica que **hay una relación entre el valor del p
 
 Así pues es importante modificar la serie de tiempo para ilustrar como se puede controlar los efectos de los autoregresores $AR(2)$. Para ello, utilizaremos la función $arima()$. En "order" tenemos un vector $c(p,d,q)$ que corresponde $p$ a el grado de AR, $d$ el grado de diferención y $q$ el grado de MA que utilizaremos. El valor $q$ quedaráá en $0$ por ahora pero será analizado más adelante.
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.align='center', out.width="100%"}
 AR_price_amazn_ts<-arima(price_amazn_ts,order=c(2,0,0),method = "ML")
 AR_price_amazn_pl<-Arima(price_amazn_ts,order=c(2,0,0),method = "ML")
 ```
 
 Veamos si las raices inversas mantienen la estabilidad al ser menores a 1.
-```{r amazn20root, fig.cap="Raices AR(2) Inversas de la serie de tiempo", warning=FALSE, message=FALSE}
-plot.armaroots(arroots(AR_price_amazn_ts), main="Raices inversas de AR(2)")
+```{r amazn20root, fig.cap="Raices AR(2) Inversas de la serie de tiempo", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
+autoplot(AR_price_amazn_ts)+theme_light()
 ```
 Claramente se puede en la Figura \@ref(fig:amazn20root) ver que los valores de las raices inversas están dentro del circulo unitario y, por consiguiente son menores a 1. Ahora veamos como se ve la estimación ajustada AR(2) con el plot original.
 
-```{r amazn20AR2, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(2)", warning=FALSE, message=FALSE}
+```{r amazn20AR2, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(2)", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 plot(AR_price_amazn_pl$x,col="black", main = "Diferencia entre la serie de tiempo original y AR(2)",xlab="Tiempo",ylab="Precio")+lines(fitted(AR_price_amazn_pl),col="blue")
 ```
 Consecuentemente en la Figura \@ref(fig:amazn20AR2) es posible ver la manera en la que se suaviza un poco la línea lo cual debe ayudarnos a hacer una mejor estimación. Ahora veamos $AR(p)$.
 
-### AR(p)
 
 ### AR(p)
 
@@ -766,30 +760,30 @@ Es decir, podemos obtener la siguiente expresión:
 
 Veamos primero la función de autocorrelacion y el plot de los lags.
 
-```{r pacfamzn, fig.cap="Función de Autocorrelación parcial de la serie de tiempo de AMZN", warning=FALSE, message=FALSE}
+```{r pacfamzn, fig.cap="Función de Autocorrelación parcial de la serie de tiempo de AMZN", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 pacf(price_amazn_ts, main="", lag.max = 60)
 ```
-```{r acfamzn, fig.cap="Función de Autocorrelación de la serie de tiempo de AMZN", warning=FALSE, message=FALSE}
+```{r acfamzn, fig.cap="Función de Autocorrelación de la serie de tiempo de AMZN", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 acf(price_amazn_ts, main="", lag.max = 60)
 ```
 
-```{r LAGamazn20, fig.cap="5 plots de correlacion de los lags de la serie de tiempo de AMZN", warning=FALSE, message=FALSE}
+```{r LAGamazn20, fig.cap="5 plots de correlacion de los lags de la serie de tiempo de AMZN", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 lag.plot(price_amazn_ts, main="", lags=5)
 ```
 Dado que se puede ver en las Figuras \@ref(fig:acfamzn), \@ref(fig:pacfamzn) y \@ref(fig:LAGamazn20) que los valores de lag=1 tienen correlación resulta relevante hacer un AR(1), que corresponde a 1 años. Así pues:
 
 AR:
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.align='center', out.width="100%"}
 AR_price_amazn_ts_1<-arima(price_amazn_ts,order=c(1,0,0),method = "ML")
 AR_price_amazn_pl_1<-Arima(price_amazn_ts,order=c(1,0,0),method = "ML")
 ```
 Regresión lineal:
-```{r}
+```{r, fig.align='center', out.width="100%"}
 df.lags.1<-lags(priceopen_amazn,1)
 ar20_amazn<-lm(V1~., data=df.lags.1)
 ```
 
-```{r, results='asis', echo=FALSE}
+```{r, results='asis', echo=FALSE, fig.align='center', out.width="100%"}
 stargazer(
   df.lags.1,type = "html",
   notes.align = "l", style="all2", 
@@ -800,14 +794,71 @@ stargazer(
 
 
 Raices:
-```{r amazn20root20, fig.cap="Raices AR(1) Inversas de la serie de tiempo", warning=FALSE, message=FALSE}
-plot.armaroots(arroots(AR_price_amazn_ts_1), main="Raices inversas de AR(1)")
+```{r amazn20root20, fig.cap="Raices AR(1) Inversas de la serie de tiempo", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
+autoplot(AR_price_amazn_ts_1)+theme_light()
 ```
 
 Plot:
-```{r amazn20AR20, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(1)", warning=FALSE, message=FALSE}
+```{r amazn20AR20, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(1)", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 plot(AR_price_amazn_pl_1$x,col="black", main = "Diferencia entre la serie de tiempo original y AR(1)",xlab="Tiempo",ylab="Precio")+lines(fitted(AR_price_amazn_pl_1),col="red")
 ```
+## Función de Autocorrelación Parcial
+
+Ahora introduciremos el concepto de Función de Autocorrelación Parcial (PACF, por sus siglas en inglés). Primero, dadas las condiciones de estabilidad y de convergencia, si suponemos que un proceso AR, MA, ARMA o ARIMA tienen toda la información de los rezagos de la serie en conjunto y toda la información de los promedio móviles del término de error, resulta importante construir una métrica para distinguir el efecto de $X_{t - \tau}$ o el efecto de $U_{t - \tau}$ (para cualquier $\tau$) sobre $X_t$ de forma individual.
+
+La idea es construir una métrica de la correlación que existe entre las diferentes varibles aleatorias, si para tal efecto se ha controlado el efecto del resto de la información. Así, podemos definir la ecuación que puede responder a este planteamiento como:
+\begin{equation}
+    X_t = \phi_{k1} X_{t-1} + \phi_{k2} X_{t-2} + \ldots + \phi_{kk} X_{t-k} + U_t
+    (\#eq:PACFEq)
+\end{equation}
+
+Donde $\phi_{ki}$ es el coeficiente de la variable dada con el rezago $i$ si el proceso tiene un órden $k$. Así, los coeficientes $\phi_{kk}$ son los coeficientes de la autocorrelación parcial (considerando un proceso AR(k)). Observemos que la autocorrelaicón parcial mide la correlación entre $X_t$ y $X_{t-k}$ que se mantiene cuando el efecto de las variables $X_{t-1}$, $X_{t-2}$, $\ldots$ y $X_{t-k-1}$ en $X_{t}$ y $X_{t-k}$ ha sido eliminado.
+
+Dada la expresión considerada en la ecuación \@ref(eq:PACFEq), podemos resolver el problema de establecer el valor de cada $\phi_{ki}$ mediante la solución del sistema que se representa en lo siguiente:
+
+Table: (\#tab:foo1) Relación entre la Función de autocorrelación y la Función de autocorrelación parcial de una serie $X_t$.
+
+|Modelo si:|Función de autocorrelación|Función de autocorrelación parcial|
+|:---:|:---:|:---:|
+| $MA(q)$ | Rompimientos en la función | No hay rompimientos |
+| $AR(q)$ | No hay rompimientos | Rompimientos en la función |
+
+\begin{equation}
+    \left[ 
+    \begin{array}{c}
+        \rho(1) \\
+        \rho(2) \\
+        \vdots \\
+        \rho(k)
+    \end{array} 
+    \right]
+    = 
+    \left[ 
+    \begin{array}{c c c c}
+        1 & \rho(1) & \ldots & \rho(k - 1)\\
+        \rho(1) & 1 & \ldots & \rho(k - 2)\\
+        \rho(2) & \rho(1) & \ldots & \rho(k - 3)\\
+        \vdots & \vdots & \ldots & \vdots\\
+        \rho(k - 1) & \rho(k - 2) & \ldots & 1\\
+    \end{array} 
+    \right]
+    \left[ 
+    \begin{array}{c}
+        \phi_{k1} \\
+        \phi_{k2} \\
+        \phi_{k3} \\
+        \vdots \\
+        \phi_{kk} \\
+    \end{array} 
+    \right]
+    (\#eq:PACFEq1)    
+\end{equation}
+
+Del cual se puede derivar una solución, resoviendo por el método de cramer, o cualquier otro método que consideremos y que permita calcular la solución de sistemas de ecuaciones.
+
+Posterior al análisis analítico platearemos un enfoque para interpretar las funciones de autocorrelación y autocorrelación parcial. Este enfoque pretende aportar al principio de parcimonia, en el cual podemos identificar el número de parámetros que posiblemente puede describir mejor a la serie en un modelo ARMA(p, q).
+
+En el Cuadro \@ref(tab:foo1) se muestra un resumen de las caranterísticas que debemos observar para determinar el número de parámetros de cada uno de los componentes AR y MA. Lo anterior por observación de las funciones de autocorrelación y autocorrelación parcial. Este enfoque no es el más formal, más adelante implemtaremos uno más formal y que puede ser más claro de cómo determinar el númeto de parámetros.
 
 ## Procesos de Medias Móviles (MA)
 
@@ -956,21 +1007,22 @@ Ahora veamos el ejemplo.
 #### Ejemplo MA(q)
 Cuando nos fijamos en las figuras \@ref(fig:pacfamzn) y \@ref(fig:acfamzn) es claro que hay un proceso MA(1). Es decir que picos de un año estan causando efectos en valores futuros. Así pues, escogemos un valor de $q=1$.
 
-Arima:
-```{r, message=FALSE, warning=FALSE}
+MA:
+```{r, message=FALSE, warning=FALSE, fig.align='center', out.width="100%"}
 MA_price_amazn_ts_1<-arima(price_amazn_ts,order=c(0,0,1),method = "ML")
 MA_price_amazn_pl_1<-Arima(price_amazn_ts,order=c(0,0,1),method = "ML")
 ```
 
 
-Raices MA(A):
-```{r amazn20rootma1, fig.cap="Raices MA(1) Inversas de la serie de tiempo", warning=FALSE, message=FALSE}
-plot.armaroots(maroots(MA_price_amazn_ts_1), main="Raices inversas de MA(1)")
+Raices MA(1):
+```{r amazn20rootma11, fig.cap="Raices MA(1) Inversas de la serie de tiempo", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
+autoplot(MA_price_amazn_ts_1)+theme_light()
 ```
-Dado que el valor de la raiz inversa de MA(1) en la Figura \@ref(fig:amazn20rootma1) sabemos que tenemos una serie convergente y estable.
+
+Dado que el valor de la raiz inversa de MA(1) en la Figura \@ref(fig:amazn20rootma11) sabemos que tenemos una serie convergente y estable.
 
 Plot:
-```{r amazn20AR1, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(1)", warning=FALSE, message=FALSE}
+```{r amazn20AR1, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(1)", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 plot(MA_price_amazn_pl_1$x,col="black", main = "Diferencia entre la serie de tiempo original y MA(1)",xlab="Tiempo",ylab="Precio")+lines(fitted(MA_price_amazn_pl_1),col="red")
 ```
 En la Figura \@ref(fig:amazn20AR1), es muy fácil ver que los efectos de los picos son muy bajos ahora, lo cual nos permitirá hacer mejores estimaciones. __Evidentemente querremos hacer el proceso AR(p) y MA(q) simultaneamente para obtener los mejores resultados.__
@@ -980,6 +1032,7 @@ En la Figura \@ref(fig:amazn20AR1), es muy fácil ver que los efectos de los pic
 Hemos establecido algunas relaciones las de los porcesos AR y los procesos MA, es decir, cómo un $MA(q)$ de la serie $X_t$ puede ser reexpresada como un $AR(\infty)$ de la serie $U_t$, y viceversa un $AR(p)$ de la serie $X_t$ puede ser reeexpresada como un $MA(\infty)$.
 
 En este sentido, para cerrar esta sección veámos el caso de la especificación que conjunta ambos modelos en un modelo general conocido como $ARMA(p, q)$ o $ARIMA(p, d, q)$. La diferencia entre el primero y el segundo es las veces que su tuvo que diferenciar la serie analizada, registro que se lleva en el índice $d$ de los paramétros dentro del concepto $ARIMA(p, d, q)$. No obstante, en general nos referiremos al modelo como $ARMA(p, q)$ y dependerá del analista si modela la serie en niveles (por ejemplo, en logaritmos) o en diferencias logarítmicas (o diferencias sin logaritmos).
+
 
 
 
@@ -1161,3 +1214,131 @@ Sin pérdida de generalidad podemos asumir que $\delta = 0$, lo que implica que 
     &   & + \mathbb{E}[X_{t-\tau} U_{t}] - b_1  \mathbb{E}[X_{t-\tau} U_{t-1}] - \ldots  - b_q  \mathbb{E}[X_{t-\tau} U_{t-q}] 
     (\#eq:ARMApqWold3)
 \end{eqnarray}
+
+
+## Selección de las constantes p, q, d en un AR(p), un MA(q), un ARMA(p, q) o un ARIMA(p, d, q)
+
+Respecto de cómo estimar un proceso ARMA(p, q) --en general utilizaremos este modelo para discutir, pero lo planteado en esta sección es igualmente aplicable en cualquier otro caso como aquellos modelos que incluyen variables exogénas-- existen diversas formas de estimar los paramétros $a_i$ y $b_i$: i) por máxima verosimilitd y ii) por mínimos cuadrados órdinarios. El primer caso requiere que conozcamos la distribución del proceso aleatorio $U_t$. El segundo, por el contrario, no requiere el mismo supuesto. No obstante, para el curso utilizaremos el método de máxima verosimilitud.
+
+Otra duda que debe quedar hasta el momento es ¿cómo determinar el orden $p$ y $q$ del proceso ARMA(p, q)? La manera más convencional y formal que existe para tal efecto es utilizar los criterios de información. Así, el orden se elije de acuerdo a aquel críterio de información que resulta ser el mínimo. En el caso de $d$ se selecciona revisando la gráfica que parezca más estacionaria--más adelante mostraremos un proceso más formal para su selección.
+
+Los criterios de información más comunes son los siguientes:
+
+1. FPE (Final Prediction Error):
+\begin{equation}
+    FPE = \frac{T+m}{T-m}\frac{1}{T}\sum_{t=1}^{T} \left( \hat{U}_t^{(p)} \right) ^2
+    (\#eq:ls1)
+\end{equation}
+
+2. Akaike:
+\begin{equation}
+    AIC = ln \left[ \frac{1}{T} \sum_{t=1}^{T} \left( \hat{U}_t^{(p)} \right) ^2 \right] + m \frac{2}{T}
+        (\#eq:ls2)
+\end{equation}
+
+3. Schwarz:
+\begin{equation}
+    SC = ln \left[ \frac{1}{T} \sum_{t=1}^{T} \left( \hat{U}_t^{(p)} \right) ^2 \right] + m \frac{ln(T)}{T}
+      (\#eq:ls3)
+\end{equation}
+
+4. Hannan - Quinn:
+\begin{equation}
+    HQ = ln \left[ \frac{1}{T} \sum_{t=1}^{T} \left( \hat{U}_t^{(p)} \right) ^2 \right] + m \frac{2 ln(ln(T))}{T}
+      (\#eq:ls4)
+\end{equation}
+
+Donde $\hat{U}_t^{(p)}$ son los residuales estimados mediante un proceso ARIMA y $m$ es el número de parametros estimados: $m = p + q + 0 + 1$ (ya que asumimos que $d = 0$). Una propiedad que no se debe perder de vista es que los criterios de información cumplen la siguiente relación:
+\begin{equation}
+    orden(SC) \leq orden(HQ) \leq orden(AIC)
+    (\#eq:ls5)
+\end{equation}
+
+Por esta razón, durante el curso solo utilizaremos el criterio se Akaike para determinar el orden óptimo del proceso ARMA, ya que ello garantiza el orden más grande posible.
+
+Veamos el ejemplo.
+
+### Ejemplo ARMA
+Para este caso coemzaremos por agregar dos series de tiempo. Una correspone a una transformación logarítmica de los valores de los precios y, otra, corresponde la diferentcia logaritmica. Esto dado que:
+$$log(X_t)-log(X_{t-k})\sim\frac{X_t-X_{t-k}}{X_t}$$.
+
+
+Tranformacion de la serie original
+```{r, fig.align='center', out.width="100%"}
+#original
+price_amazn_ts<-ts(data_precio_amzn$price.open, frequency = 12, start=c(2002,10))
+#logartimo
+lprice_amazn_ts<-ts(log(data_precio_amzn$price.open), frequency = 12)
+#diferencias logaritmicas(cambio porcential)
+dlprice_amazn_ts<-ts(log(data_precio_amzn$price.open)-lag(log(data_precio_amzn$price.open),1), frequency = 12)
+```
+
+Las tres series
+```{r, fig.align='center', out.width="100%"}
+par(mfrow = c(3,1))
+plot(price_amazn_ts, xlab = "Tiempo", 
+     main = "Precios de apertura",
+     col = "darkgreen")
+
+plot(lprice_amazn_ts, xlab = "Tiempo", 
+     main = "LN Precios de apertura",
+     col = "darkblue")
+
+plot(dlprice_amazn_ts, xlab = "Tiempo", 
+     main = "Diff LN de precios de apertura", 
+     col = "darkred")
+```
+
+
+Como lo vimos en las figuras \@ref(fig:pacfamzn) y \@ref(fig:acfamzn), es claro que debemos usar un valor $q$ de $1$ y $p$ de $1$. Pero tambien necesitamos diferenciar, lo cual corresponde al valor $d$. Así pues, dado que en las funciones de autocorrelacion solo vemos un pico arriba de la linea punteada azul, podemos asumir que el valor de diferenciación debe ser uno. Esto se debe seguir como regla de dedo, pero en general se debe usar el valor que minimice la desviacion estandar. Por tanto nuestro modelo debe ser $arima(1,1,1)$.
+
+Utilizamos la funcion "auto.arima" para confirmar que nuestra serie de tiempo deba ser $arima(1,1,1)$, el arima que debos usar es aquel que minimize el indice AIC.
+```{r, fig.align='center', out.width="100%"}
+auto.arima(price_amazn_ts, trace=TRUE)
+```
+```{r, fig.align='center', out.width="100%"}
+ARIMA_price_amzn_ts_111<-arima(price_amazn_ts,order=c(1,1,1),method = "ML")
+ARIMA_price_amzn_pl_111<-Arima(price_amazn_ts,order=c(1,1,1),method = "ML")
+```
+
+```{r, results='asis', echo=FALSE, fig.align='center', out.width="100%"}
+arima111<-stats::arima(price_amazn_ts,order=c(1,1,1),method = "ML")
+stargazer(arima111,type = "html", 
+          notes=c("(p<0.1)=[*], (p<0.05)=[**], (p<0.01)=[***]"),
+          title ="ARMA(1,1,1) de los precios de apertura de AMZN")
+```
+
+Raices MA(A):
+```{r amazn20rootma1, fig.cap="Raices ARMA(1) Inversas de la serie de tiempo", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
+autoplot(ARIMA_price_amzn_ts_111)+theme_light()
+```
+
+Dado esto, sabemos claramente que podremos analizar de mejor manera estos valores y, en consecuencia, hacer mejores estimaciones.
+
+
+
+## Pronósticos
+
+Para pronósticar el valor de la serie es necesario determinar cuál es el valor esperado de la serie en un momento $t + \tau$ condicional en que ésta se comporta como un $AR(p)$, un $MA(q)$ o un $ARMA(p, q)$ y a que los valores antes de $t$ están dados. Por lo que el pronóstico de la serie estará dado por una expresión:
+
+\begin{eqnarray}
+    \mathbb{E}_t[X_{t+\tau}] = \delta + a_1 \mathbb{E}_t[X_{t+\tau-1}] + a_2 \mathbb{E}_t[X_{t+\tau-2}] + \ldots + + a_p \mathbb{E}_t[X_{t+\tau-p}]
+    (\#eq:ARMApqFor)
+\end{eqnarray}
+```{r}
+ARIMA_price_amzn_ts_111_F<-predict(ARIMA_price_amzn_ts_111, n.ahead = 12)
+ARIMA_price_amzn_ts_111_F
+```
+Valores en la base de datos original:
+```{r}
+pred<- forecast(ARIMA_price_amzn_ts_111,h=10)
+pred1 <- pred$mean
+union <- ts.union(price_amazn_ts,pred1)
+df.pred <- data.frame(union)
+df.pred[is.na(df.pred)] <- 0
+df.pred$complete <- df.pred$price_amazn_ts+df.pred$pred1
+head(df.pred)
+```
+```{r}
+plot(pred)
+```
